--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <audio controls source src="nhacnen.mp3" autoplay>
+  <audio source src="nhacnen.mp3" autoplay>
   </audio>
   <section class="gift">
     <div class="gift-top hovered"></div>
