--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <!--   <audio source src="nhacnen.mp3" autoplay>
   </audio> -->
-  <iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/_SF6JjUIWpA?si=ARNvx_A9WVTntM1o&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/_SF6JjUIWpA?si=ARNvx_A9WVTntM1oplaylist=_SF6JjUIWpA?si=ARNvx_A9WVTntM1o&loop=1;rel=0&autoplay=1&controls=0&showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <section class="gift">
     <div class="gift-top hovered"></div>
     <div class="gift-bottom"></div>
